<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FindYou-输入法工具箱</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="location">我的位置</string>
    <string name="location_">我的位置 :　</string>
    <string name="navigation">导航至好友位置</string>
    <string name="ok_btn">发送</string>
    <string name="cancel_btn">取消</string>
    <string name="hint">没有获取到地址</string>
    <string name="start_addr">起点</string>
    <string name="dest_addr">终点</string>
    <string name="send">发送</string>
    <string name="locating">定位中&#8230;</string>
    <string name="bus">公交查询</string>
    <string name="poi">周边</string>
    <string name="search">搜索</string>
    <string name="route">路线搜索</string>
    <string name="route_hint">请选择一条路线 </string>
    <string name="distance">距离:</string>
    <string name="time">耗时:</string>
    <string name="summary">方案</string>
    <string name="taxr_price">打车:</string>
    <string name="detail">详情</string>

</resources>