<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:background="@drawable/layout_corner"
    android:gravity="center"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/addr_cancel_btn"
        android:layout_width="30dp"
        android:layout_height="60dp"
        android:background="@drawable/gray_button_style"
        android:text="@string/cancel_btn"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/address_edit"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/hint"
        android:maxWidth="260dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/addr_ok_btn"
        android:layout_width="30dp"
        android:layout_height="60dp"
        android:background="@drawable/button_style"
        android:text="@string/ok_btn"
        android:textSize="18sp" />

</LinearLayout>