<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#dd5555"
    android:gravity="center" >

    <EditText
        android:id="@+id/address_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/address_edit"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/addr_cancel_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_btn" />

        <Button
            android:id="@+id/addr_ok_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/ok_btn" />
    </LinearLayout>

</RelativeLayout>