<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_corner"
    android:gravity="center" >

    <EditText
        android:id="@+id/address_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/address_edit"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/addr_cancel_btn"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:background="@drawable/gray_button_style"
            android:text="@string/cancel_btn"
            android:textSize="15sp" />

        <Button
            android:id="@+id/addr_ok_btn"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/button_style"
            android:text="@string/ok_btn"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>