<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.umeng.findyou.views.MyLocationMapView
        android:id="@+id/baidu_mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="left|center"
        android:background="@drawable/layout_corner"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/location_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/location_" />

        <ProgressBar
            android:id="@+id/locate_prgb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/location_addr_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/locating"
            android:layout_weight="1" />

        <Button
            android:id="@+id/send_btn"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:background="@drawable/button_style"
            android:text="@string/send"
            android:enabled="false"
            android:textSize="15sp" />
    </LinearLayout>

</FrameLayout>