<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.umeng.findyou.views.MyLocationMapView
        android:id="@+id/baidu_mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true" />

    <!-- 路线详情 -->

    <include
        android:id="@+id/mapview_route_detail_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        layout="@layout/route_detail_bar"
        android:visibility="gone" />

    <!-- 缩放按钮 -->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="100dp"
        android:layout_marginRight="5dp" >

        <ImageButton
            android:id="@+id/zoom_out_btn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/zoom_out_button_style"
            android:contentDescription="@string/app_name" />

        <ImageButton
            android:id="@+id/zoom_in_btn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_below="@id/zoom_out_btn"
            android:background="@drawable/zoom_in_button_style"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>
    <!-- 下面的图标 -->

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/alpha_layout_corner"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <ImageButton
            android:id="@+id/my_location_btn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/mylocation_button_style"
            android:contentDescription="@string/location"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/bus_btn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/bus_button_style"
            android:contentDescription="@string/bus"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/poi_btn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/poi_button_style"
            android:contentDescription="@string/poi"
            android:textSize="15sp" />
    </LinearLayout>

</FrameLayout>