<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_layout"
    android:layout_width="match_parent"
    android:layout_height="320dp"
    android:background="@drawable/dialog_bg"
    android:gravity="top|center" >

    <!-- 交通工具选择 -->

    <LinearLayout
        android:id="@+id/vechcle_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/bus_toggle_btn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/bus_pressed"
            android:contentDescription="@string/app_name"
            android:textOff=""
            android:textOn="" />

        <ImageButton
            android:id="@+id/car_toggle_btn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/car_normal"
            android:contentDescription="@string/app_name"
            android:textOff=""
            android:textOn="" />

        <ImageButton
            android:id="@+id/walk_toggle_btn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/foot_normal"
            android:contentDescription="@string/app_name"
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

    <!--  -->

    <RelativeLayout
        android:id="@+id/edit_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/vechcle_layout"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp" >

        <ImageButton
            android:id="@+id/change_btn"
            android:layout_width="30dp"
            android:layout_height="75dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/app_name"
            android:layout_centerVertical="true"
            android:background="@drawable/change_addr_button_style" />

        <RelativeLayout
            android:id="@+id/edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/change_btn" >

            <EditText
                android:id="@+id/start_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/bullet_green"
                android:hint="@string/start_addr"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/dest_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/start_edit"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/bullet_red"
                android:hint="@string/dest_addr"
                android:textSize="14sp" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="3dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="5dp" >

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:background="@drawable/gray_button_style"
            android:text="@string/cancel_btn"
            android:textSize="15sp" />

        <Button
            android:id="@+id/nav_btn"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/button_style"
            android:text="@string/search"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>